# coq-in-hs

./: README.markdown  coq-in-hs.cabal
src/: Coq.hs  CoqLibs.hs  Example.hs
