name:                coq-in-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Coq, Example
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.7 && <4.8,
    haskell-src-meta,
    process,
    template-haskell,
    temporary,
    transformers

  hs-source-dirs:      src
  default-language:    Haskell2010
